fix(app-shell): spacing for long label in menu items

--- a/packages/application-shell/src/components/navbar/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar.mod.css
@@ -252,7 +252,7 @@
 /*  Second level menu */
 
 .sublist {
-  padding: 55px var(--spacing-l) var(--spacing-m);
+  padding: 75px var(--spacing-l) var(--spacing-m);
   /* stylelint-disable-next-line csstools/value-no-unknown-custom-properties */
   font-weight: var(--font-weight-for-navbar-link);
   /* stylelint-disable-next-line csstools/value-no-unknown-custom-properties */
@@ -345,6 +345,14 @@
 
 .list-item.item__active .item-icon-text .title {
   margin-left: 40px;
+}
+.item_menu-collapsed.list-item.item__active .item-icon-text .title {
+  max-height: 44px;
+  overflow-x: hidden;
+  /* stylelint-disable-next-line value-no-vendor-prefix */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 :global(.body__menu-open) .list-item.item__active .item-icon-text .title {
